Resolving compiling error

--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
 		<mysql-connector-java.version>5.1.12</mysql-connector-java.version>
 		<ganymed.ssh.version>build210</ganymed.ssh.version>
 		<jsontools.version>1.7</jsontools.version>
-		<json.version>2.2</json.version>
+		<json.version>20141113</json.version>
 
 
 
